# pack

./: .gitignore  FileType.hs  Pack.hs  Path.hs  README.md  Unpack.hs  pack  stack.yaml  unpack.cabal
man/man1/: pack.1
src/: Archive.hs
src/Archive/: Build.hs  Extract.hs  Formats.hs  Helpers.hs  Identify.hs  Types.hs
src/Archive/Formats/: External.hs
