name:                unpack
version:             0.1.0.0
synopsis:            sane file (de)compression
description:         multi-format archive and compression utilities
homepage:            http://github.com/imuli/pack
license:             PublicDomain
license-file:        LICENSE
author:              imuli
maintainer:          i@imu.li
-- copyright:           
category:            System, Compression
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable pack
  main-is:             Pack.hs
  other-modules:       FileType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , hflags
                     , process
  default-language:    Haskell2010

executable unpack
  main-is:             Unpack.hs
  other-modules:       FileType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , hflags
                     , magic
                     , process
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/imuli/pack
