name:                unpack
version:             0.1.0.0
synopsis:            sane file (de)compression
description:         multi-format archive and compression utilities
homepage:            http://github.com/imuli/pack
license:             PublicDomain
license-file:        LICENSE
author:              imuli
maintainer:          i@imu.li
-- copyright:           
category:            System, Compression
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Archive
  other-modules:       Archive.Helpers
                       Archive.Types
                       Archive.Extract
                       Archive.Build
                       Archive.Identify
  build-depends:       base >= 4.7 && < 5
                     , process
                     , filepath
                     , attoparsec
                     , bytestring
  default-language:    Haskell2010

executable pack
  main-is:             Pack.hs
  other-modules:       Path
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , hflags
                     , process
                     , unpack
  default-language:    Haskell2010

executable unpack
  main-is:             Unpack.hs
  other-modules:       Path
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , hflags
                     , process
                     , random
                     , unpack
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/imuli/pack
